...
    <string name="rest_rating">0.0</string>
    <string name="rest_price">$$$</string>
    <string name="address">Address Unknown</string>
    <string name="reviews_label">Reviews</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_lunchbox">Welcome to LunchBox!!</string>
    <string name="sort_label">Sort by</string>
    <string name="no_results_message">Sorry, no restaurants match the given criteria</string>
    <string name="no_user_results_message">Sorry, no users match the given username</string>
    <string name="navigateToPostReview_button_label">Add Review</string>

    <string name="add_review_heading">Add Review</string>
    <string name="rating_label">Rating</string>
    <string name="review_label">Review</string>
...
    <string name="profile_date">Date Joined</string>
    <string name="profile_friends_button">See Friends</string>
    <string name="add_friends_button">Add Friend</string>

    <string name="notifications_label">Notifications</string>

    <string name="login_label">Log In</string>
    <string name="signup_label">Sign Up</string>
    <string name="search_btn">Search Restaurants</string>
    <string name="profile_btn">My Profile</string>
    <string name="find_friends">Find Friends</string>
    <string name="logout">Logout</string>
    <string name="user_search_btn">Search Users</string>
...
